--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -11,17 +11,12 @@
 <body>
     <h1>Пару слов об этом авторе</h1>
     <p>Привет &#128400; Меня зовут Саша. Мне <sup>24</sup> года &#9808 и я живу в Минске. &#9872<br> В настоящее время
-        <strong>занимаюсь
-            изучением &#127891; Front-end.</strong></p>
+        <strong>занимаюсь изучением &#127891; Front-end.</strong></p>
     <hr>
     <h3>Front-end и почему я его выбрал</h3>
-    <p>Front-end, в первую очередь, интересен тем, что процесс разработки тут же можно визуализировать. <em>Добавил код
-            -
-            увидел результат. &lt; &gt;</em><br>Создание современных интерфейсов взаимодествия пользователя и сервера
-        &#9745;,
-        возможность
-        экспериментировать &#9745;, <del>работать удалённо</del> &#9745; - одни из тех преимуществ, которые привели меня
-        в
+    <p>Front-end, в первую очередь, интересен тем, что процесс разработки тут же можно визуализировать. <em>Добавил код - увидел
+        результат. &lt; &gt;</em><br>Создание современных интерфейсов взаимодествия пользователя и сервера &#9745;, возможность
+        экспериментировать &#9745;, <del>работать удалённо</del> &#9745; - одни из тех преимуществ, которые привели меня в
         эту область.</p>
     <hr>
     <img src="./space.jpg" alt="space" width="800" height="400">
@@ -99,51 +94,138 @@
     </table>
     <form action="/" method="GET">
         <fieldset style="margin-top: 30px;">
-            <legend>My first form</legend><br>
+            <legend>My first form</legend>
+            <br>
             <div>
-                <label for="name">Name</label><br>
-                <input type="text" name="name" id="name" placeholder="Enter your name" required
-                    style="margin-top: 5px; margin-bottom: 15px;"><br>
+                <label for="name">Name</label>
+                <br>
+                <input 
+                    type="text" 
+                    name="name" 
+                    id="name" 
+                    placeholder="Enter your name" 
+                    required
+                    style="margin-top: 5px; margin-bottom: 15px;"
+                >
+                <br>
             </div>
             <div>
-                <label for="email">Email</label><br>
-                <input type="email" name="email" id="email" placeholder="Enter your email" required
-                    style="margin-top: 5px; margin-bottom: 15px;"><br>
+                <label for="email">Email</label>
+                <br>
+                <input 
+                    type="email" 
+                    name="email" 
+                    id="email" 
+                    placeholder="Enter your email" 
+                    required
+                    style="margin-top: 5px; margin-bottom: 15px;"
+                >
+                <br>
             </div>
             <div>
-                <label for="password">Password</label><br>
-                <input type="password" name="password" id="password" placeholder="Enter your password" required
-                    style="margin-top: 5px; margin-bottom: 15px;"><br>
+                <label for="password">Password</label>
+                <br>
+                <input 
+                    type="password" 
+                    name="password" 
+                    id="password" 
+                    placeholder="Enter your password" 
+                    required
+                    style="margin-top: 5px; margin-bottom: 15px;"
+                >
+                <br>
             </div>
             <div>
-                <label for="programming-level">Your programming level</label><br>
-                <input type="range" name="programming-level" id="programming-level" min="1" max="10"
-                    style="margin-top: 10px; margin-bottom: 50px;"><br>
+                <label for="programming-level">Your programming level</label>
+                <br>
+                <input 
+                    type="range" 
+                    name="programming-level" 
+                    id="programming-level" 
+                    min="1" 
+                    max="10"
+                    style="margin-top: 10px; margin-bottom: 50px;"
+                >
+                <br>
             </div>
             <div>
                 <p>What does HTML stand for?</p>
-                <input type="checkbox" name="http-question" id="html-first-answer">
-                <label for="html-first-answer">Hyperlinks and Text Markup Language</label><br>
-                <input type="checkbox" name="html-question" id="html-second-answer" style="margin-top: 10px;">
-                <label for="html-second-answer">Home Tool Markup Language</label><br>
-                <input type="checkbox" name="html-question" id="html-third-answer"
-                    style="margin-top: 10px; margin-bottom: 30px;">
-                <label for="html-third-answer">Hyper Text Markup Language</label><br>
+                <div>
+                    <input
+                        type="checkbox"
+                        name="http-question"
+                        id="html-first-answer"
+                    >
+                    <label for="html-first-answer">Hyperlinks and Text Markup Language</label>
+                </div>
+                <br>
+                <div>
+                    <input
+                        type="checkbox"
+                        name="html-question"
+                        id="html-second-answer"
+                        style="margin-top: 10px;"
+                    >
+                    <label for="html-second-answer">Home Tool Markup Language</label>
+                </div>
+                <br>
+                <div>
+                    <input
+                        type="checkbox"
+                        name="html-question"
+                        id="html-third-answer"
+                        style="margin-top: 10px; margin-bottom: 30px;"
+                    >
+                    <label for="html-third-answer">Hyper Text Markup Language</label>
+                </div>
+                <br>
             </div>
             <div>
                 <p>What does HTTP stand for?</p>
-                <input type="radio" name="http-question" id="http-first-answer">
-                <label for="http-first-answer">Hyper Text Translate Protocol</label><br>
-                <input type="radio" name="http-question" id="http-second-answer" style="margin-top: 10px">
-                <label for="http-second-answer">Hyper Text Transmission Protocol</label><br>
-                <input type="radio" name="http-question" id="http-third-answer"
-                    style="margin-top: 10px; margin-bottom: 30px;">
-                <label for="http-third-answer">Hyper Text Transfer Protocol</label><br>
+                <div>
+                    <input
+                        type="radio"
+                        name="http-question"
+                        id="http-first-answer"
+                    >
+                    <label for="http-first-answer">Hyper Text Translate Protocol</label>
+                </div>
+                <br>
+                <div>
+                    <input
+                        type="radio"
+                        name="http-question"
+                        id="http-second-answer"
+                        style="margin-top: 10px"
+                    >
+                    <label for="http-second-answer">Hyper Text Transmission Protocol</label>
+                </div>
+                <br>
+                <div>
+                    <input
+                        type="radio"
+                        name="http-question"
+                        id="http-third-answer"
+                        style="margin-top: 10px; margin-bottom: 30px;"
+                    >
+                    <label for="http-third-answer">Hyper Text Transfer Protocol</label>
+                </div>
+                <br>
             </div>
             <div>
-                <label for="comment">Comment</label><br>
-                <textarea name="comment" id="comment" placeholder="Comment" rows="4" cols="30" maxlength="500"
-                    style="margin-top: 5px; margin-bottom: 30px;"></textarea><br>
+                <label for="comment">Comment</label>
+                <br>
+                <textarea 
+                    name="comment" 
+                    id="comment" 
+                    placeholder="Comment" 
+                    rows="4" 
+                    cols="30" 
+                    maxlength="500"
+                    style="margin-top: 5px; margin-bottom: 30px;"
+                >
+                </textarea>
+                <br>
             </div>
             <div>
                 <label for="html-select">What does HTML stand for?</label><br>
