Fixed <p> tabulation. Added a folder for images.

--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -10,16 +10,20 @@
 
 <body>
     <h1>Пару слов об этом авторе</h1>
-    <p>Привет &#128400; Меня зовут Саша. Мне <sup>24</sup> года &#9808 и я живу в Минске. &#9872<br> В настоящее время
-        <strong>занимаюсь изучением &#127891; Front-end.</strong></p>
+    <p>
+        Привет &#128400; Меня зовут Саша. Мне <sup>24</sup> года &#9808 и я живу в Минске. &#9872<br> 
+        В настоящее время <strong>занимаюсь изучением &#127891; Front-end.</strong>
+    </p>
     <hr>
     <h3>Front-end и почему я его выбрал</h3>
-    <p>Front-end, в первую очередь, интересен тем, что процесс разработки тут же можно визуализировать. <em>Добавил код - увидел
+    <p>
+        Front-end, в первую очередь, интересен тем, что процесс разработки тут же можно визуализировать. <em>Добавил код - увидел
         результат. &lt; &gt;</em><br>Создание современных интерфейсов взаимодествия пользователя и сервера &#9745;, возможность
         экспериментировать &#9745;, <del>работать удалённо</del> &#9745; - одни из тех преимуществ, которые привели меня в
-        эту область.</p>
+        эту область.
+    </p>
     <hr>
-    <img src="./space.jpg" alt="space" width="800" height="400">
+    <img src="./Images/space.jpg" alt="space" width="800" height="400">
     <ol>
         <li>Знакомство с Web</li>
         <ul>
