--- a/lesson-4/index.html
+++ b/lesson-4/index.html
@@ -11,9 +11,7 @@
 
 <body>
   <div class="advantages-wrapper"> 
-    <div class="advantages-header">
-      <p>What do we offer</p>
-    </div>
+    <h2>What do we offer</h2>
     <div>
       <div class="support-item">
         <img class="support-icon" src="./images/icons/support.svg" alt="support">
