Fixed tabulation issues. Delete some <br>

--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <h1>Пару слов об этом авторе</h1>
     <p>
@@ -99,10 +97,8 @@
     <form action="/" method="GET">
         <fieldset style="margin-top: 30px;">
             <legend>My first form</legend>
-            <br>
             <div>
-                <label for="name">Name</label>
-                <br>
+                <label for="name">Name</label><br>
                 <input 
                     type="text" 
                     name="name" 
@@ -111,11 +107,9 @@
                     required
                     style="margin-top: 5px; margin-bottom: 15px;"
                 >
-                <br>
             </div>
             <div>
-                <label for="email">Email</label>
-                <br>
+                <label for="email">Email</label><br>
                 <input 
                     type="email" 
                     name="email" 
@@ -124,11 +118,9 @@
                     required
                     style="margin-top: 5px; margin-bottom: 15px;"
                 >
-                <br>
             </div>
             <div>
-                <label for="password">Password</label>
-                <br>
+                <label for="password">Password</label><br>
                 <input 
                     type="password" 
                     name="password" 
@@ -137,11 +129,9 @@
                     required
                     style="margin-top: 5px; margin-bottom: 15px;"
                 >
-                <br>
             </div>
             <div>
-                <label for="programming-level">Your programming level</label>
-                <br>
+                <label for="programming-level">Your programming level</label><br>
                 <input 
                     type="range" 
                     name="programming-level" 
@@ -150,7 +140,6 @@
                     max="10"
                     style="margin-top: 10px; margin-bottom: 50px;"
                 >
-                <br>
             </div>
             <div>
                 <p>What does HTML stand for?</p>
@@ -162,7 +151,6 @@
                     >
                     <label for="html-first-answer">Hyperlinks and Text Markup Language</label>
                 </div>
-                <br>
                 <div>
                     <input
                         type="checkbox"
@@ -172,7 +160,6 @@
                     >
                     <label for="html-second-answer">Home Tool Markup Language</label>
                 </div>
-                <br>
                 <div>
                     <input
                         type="checkbox"
@@ -182,7 +169,6 @@
                     >
                     <label for="html-third-answer">Hyper Text Markup Language</label>
                 </div>
-                <br>
             </div>
             <div>
                 <p>What does HTTP stand for?</p>
@@ -194,7 +180,6 @@
                     >
                     <label for="http-first-answer">Hyper Text Translate Protocol</label>
                 </div>
-                <br>
                 <div>
                     <input
                         type="radio"
@@ -204,7 +189,6 @@
                     >
                     <label for="http-second-answer">Hyper Text Transmission Protocol</label>
                 </div>
-                <br>
                 <div>
                     <input
                         type="radio"
@@ -214,11 +198,9 @@
                     >
                     <label for="http-third-answer">Hyper Text Transfer Protocol</label>
                 </div>
-                <br>
             </div>
             <div>
-                <label for="comment">Comment</label>
-                <br>
+                <label for="comment">Comment</label><br>
                 <textarea 
                     name="comment" 
                     id="comment" 
@@ -229,7 +211,6 @@
                     style="margin-top: 5px; margin-bottom: 30px;"
                 >
                 </textarea>
-                <br>
             </div>
             <div>
                 <label for="html-select">What does HTML stand for?</label><br>
@@ -238,12 +219,11 @@
                     <option value="select-first-answer">Hyperlinks and Text Markup Language</option>
                     <option value="select-second-answer">Home Tool Markup Language</option>
                     <option value="select-third-answer">Hyper Text Markup Language</option>
-                </select><br>
+                </select>
             </div>
             <button type="submit" style="margin-top: 30px;">Send</button>
         </fieldset>
     </form>
     <hr>
 </body>
-
 </html>
