Made the section using flex.

--- a/lesson-4/index.html
+++ b/lesson-4/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/styles.css">
-  <title>Document</title>
+  <title>lesson-4</title>
 </head>
-
 <body>
   <div class="advantages-wrapper"> 
     <h2>What do we offer</h2>
-    <div>
-      <div class="support-item">
-        <img class="support-icon" src="./images/icons/support.svg" alt="support">
-        <p class="support-title">Support 24/7</p>
+    <div class="advantages-items">
+      <div class="item">
+        <div class="item-icon">
+          <img src="./images/icons/support.svg" alt="Support 24/7">
+        </div>
+        <p class="item-title">Support 24/7</p>
       </div>
-      <div class="communicate-item">
-        <img class="communicate-icon" src="./images/icons/communicate.svg" alt="communicate">
-        <p class="communicate-title">Communicate directly</p>
+      <div class="item">
+        <div class="item-icon">
+          <img src="./images/icons/communicate.svg" alt="Communicate directly">
+        </div>
+        <p class="item-title">Communicate directly</p>
       </div>
-      <div class="booking-item">
-        <img class="booking-icon" src="./images/icons/book-online.svg" alt="booking">
-        <p class="booking-title">Book online</p>
+      <div class="item">
+        <div class="item-icon">
+          <img src="./images/icons/book-online.svg" alt="Book online">
+        </div>
+        <p class="item-title">Book online</p>
       </div>
-      <div class="reviews-item">
-        <img class="reviews-icon" src="./images/icons/reviews.svg" alt="reviews">
-        <p class="reviews-title">Real guest reviews</p>
+      <div class="item">
+        <div class="item-icon">
+          <img src="./images/icons/reviews.svg" alt="Real guest reviews">
+        </div>
+        <p class="item-title">Real guest reviews</p>
       </div>
     </div>
   </div> 
 </body>
-
 </html>
