--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -8,7 +8,7 @@
   <title>lesson-4</title>
 </head>
 <body>
-  <div class="advantages-wrapper"> 
+  <div class="container"> 
     <h2>What do we offer</h2>
     <div class="advantages-items">
       <div class="item">
@@ -38,30 +38,32 @@
     </div>
   </div> 
   <footer>
-    <div class="footer-wrapper">
-      <div class="footer-links">
-        <p>About</p>
-        <a href="#">How Triphouse works</a>
-        <a href="#">Careers</a>
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
+    <div class="container">
+      <div class="footer-wrapper">
+        <div class="footer-links">
+          <p>About</p>
+          <a href="#">How Triphouse works</a>
+          <a href="#">Careers</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+        </div>
+        <div class="footer-links">
+          <p>Property types</p>
+          <a href="#">Guest houses</a>
+          <a href="#">Hotels</a>
+          <a href="#">Apartments</a>
+          <a href="#">Villas</a>
+          <a href="#">Holiday homes</a>
+          <a href="#">Hostels</a>
+        </div>
+        <div class="footer-links">
+          <p>Support</p>
+          <a href="#">Contact Customer Service</a>
+          <a href="#">FAQ</a>
+        </div>
       </div>
-      <div class="footer-links">
-        <p>Property types</p>
-        <a href="#">Guest houses</a>
-        <a href="#">Hotels</a>
-        <a href="#">Apartments</a>
-        <a href="#">Villas</a>
-        <a href="#">Holiday homes</a>
-        <a href="#">Hostels</a>
-      </div>
-      <div class="footer-links">
-        <p>Support</p>
-        <a href="#">Contact Customer Service</a>
-        <a href="#">FAQ</a>
-      </div>
+      <p class="footer-copy">&#169; 2020 Triphouse, Inc. All rights reserved</p>
     </div>
-    <p class="footer-copy">&#169; 2020 Triphouse, Inc. All rights reserved</p>
   </footer>
 </body>
 </html>
